December 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfinput/analog.c: Allow analog sticks to be mapped to non-axis
   events (keyboard & joystick buttons) as well.
 * plugins/dfinput/cfg.c: Likewise.
 * plugins/dfinput/cfg-gtk2.c: Likewise.
 * plugins/dfinput/xkb.c: Likewise.
 * plugins/dfinput/pad.h: Likewise.
 * po/zh_CN.po, po/zh_TW.po, po/pt_BR.po, po/pcsx.pot: Updated.
 * libpcsxcore/psxbios.c: Don't touch the stack pointer if pointed to the
   hardware area, which fixes FF7 chocobo racing problem. Don't always
   allocate stack spaces before softcall.

December 3, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfinput/pad.c: Changed the value of center position to 127 instead
   of 128, which fixes the FF8 problem. Still need further confirmation about
   this, as all of the protocol docs I've read as well as psemu_plugin_defs.h
   say 128 is the center position.
 * libpcsxcore/r3000a.c: Minor cleanup.

December 2, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfinput/pad.c: Removed DualShock2-specific stuff in PADpoll().
 * macosx/plugins/HIDInput/src/PlugPAD.c: Likewise.

December 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfcdrom/cdr-linux.c: Fixed crash bug when resuming emulation in
   Threaded mode.
 * gui/MemcardDlg.c: Don't keep previous selection after creating a new
   memcard or changing a memcard.
 * gui/Gtk2Gui.c: Minor cleanup.

November 30, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * macosx/plugins/DFSound/PeopsSPU.xcodeproj/project.pbxproj: Changed build
   directory into ../../build.
 * macosx/plugins/HIDInput/HIDInput.xcodeproj/project.pbxproj: Likewise.
 * macosx/plugins/CDDeviceInterface/CDDeviceInterfacePlugin.xcodeproj/
   project.pbxproj: Likewise.
 * macosx/plugins/DFXVideo/PeopsSoftGPU.xcodeproj/project.pbxproj: Likewise.
 * macosx/Pcsx.xcodeproj/project.pbxproj: Include building and copying plugins
   to the bundle (thanks avlex).

November 29, 2009 Wei Mingzhi <weimingzhi@gmail.com>
